// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Arrow render renders correctly for default direction 1`] = `
<div
  style={
    Object {
      "transform": "rotate(180deg)",
    }
  }
>
  <pure(ArrowDropDownIcon)
    style={
      Object {
        "color": "#979797",
        "fontSize": 40,
        "transform": "rotate(90deg)",
      }
    }
  />
  <span
    className="undefined"
  />
</div>
`;

exports[`Arrow render renders correctly for direction left 1`] = `
<div
  style={Object {}}
>
  <pure(ArrowDropDownIcon)
    style={
      Object {
        "color": "#979797",
        "fontSize": 40,
        "transform": "rotate(90deg)",
      }
    }
  />
  <span
    className=""
  />
</div>
`;
